@@ -2225,3 +2225,4 @@
   EntityGeneratorModelTest fleshed out some
   EntityGeneratorModel improved
   AbstractFilteredTableModel.refresh() no longer resets the sorting state, simple sorts the model before returning
+  ConnectionPoolImpl, Stack replaced with Deque
